--- a/TPC5/enunciado.ipynb
+++ b/TPC5/enunciado.ipynb
@@ -57,7 +57,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.9"
+      "version": "3.10.9 (main, Dec 19 2022, 17:35:49) [GCC 12.2.0]"
     },
     "vscode": {
       "interpreter": {
